package IM.Register;
import "IM.BaseDefine.proto";
option java_package = "com.tenth.space.protobuf";
//option java_outer_classname = "MOGUJIEIMMessage";
option optimize_for = LITE_RUNTIME;

//service id:	0x0009


message IMRegisterReq{
	//cmd id:		0x0901
	required string user_name = 1;
	required string password = 2;
	optional bytes attach_data = 20;
}

message IMRegisterRsp{
	//cmd id:		0x0902
	required IM.BaseDefine.ResultType result_code = 1;
	optional string result_string = 2;
	optional bytes attach_data = 20;
}


